--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,33 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" ></script>
 </head>
+<style>
+.navbar {
+overflow: hidden;
+background-color: black;
+position: fixed;
+top: 0;
+opacity:80%;
+width: 100%;
+}
+
+
+
+
+.navbar a:hover {
+background: black;
+color: black;
+}
+
+</style>
+<nav class="navbar navbar a">
 <body class="container">
 <h1>Recursos Humanos - TravelTrip</h1>
 <hr>
 <div class="container px-4 py-5">
     <img th:src="@{'/img/travel_trip_logo.png'} " style="width: 950px;height: 700px">
 
-    <div  class="row justify-content-around" >
+    <div  class=" navbar nabar a row justify-content-around" >
         <a  ><button class="btn btn-primary">Empleados</button></a>
         <a ><button class="btn btn-warning">Historial</button></a>
     </div>
