--- a/src/main/resources/templates/fragments/NuevoUsuario.html
+++ b/src/main/resources/templates/fragments/NuevoUsuario.html
@@ -1,19 +1,57 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <!-- Choices CSS-->
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<style>
+    .navbar {
+        overflow: hidden;
+        background-color: black;
+        position: fixed;
+        top: 0;
+        opacity:80%;
+        width: 100%;
+    }
 
-<head>
 
-</head>
+
+
+    .navbar a:hover {
+        background: black;
+        color: black;
+    }
+
+
+    .main {
+        margin-top: 40px;
+    }
+    .img {
+
+        top:100px;
+
+    }
+</style>
+<nav class="navbar navbar a">
+
+    <div class="container-fluid">
+
+        <a class="btn btn-outline-light" href="index.html" type="button">Empleados</a>
+        <a class="btn btn-outline-light" href="perfil.html" type="button"  >Historial</a>
+        <a class="btn btn-outline-light" href="usuarios.html" type="button" > Reportes</a>
+        <br>
+        <br>
+    </div>
+</nav>
+<body>
 <body>
 
 <div style="margin-left:100px; width:600px">
     <div style="padding-rigth:100px 100px">
         <div class="row" >
             <div class="col-sm-6 mt-4 ml-2 mb-4" >
+                <br><br><br>
 
                 <h2 class="text-center ">Mis Transacciones</h2></div>
             <div class="col-sm-6 mt-4 ml-3 mb-4" >
@@ -58,8 +96,8 @@
             <option value="3">Marcelo</option>
         </select>
         <br>
-        <p>Departamento</p>
-        <input class="form-control"  id="depart"  type="text" aria-describedby="tipo">
+        <p>Billetera</p>
+        <input class="form-control"  id="wallet"  type="text" aria-describedby="tipo">
         <br>
         <table>
             <tr>
@@ -74,4 +112,10 @@
             </tr>
         </table></div>
 </body>
+</body>
+
+
+
+
+
 </html>
