--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,57 @@
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" ></script>
-</head>
+<html lang="en">
+<!-- Choices CSS-->
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 <style>
-.navbar {
-overflow: hidden;
-background-color: black;
-position: fixed;
-top: 0;
-opacity:80%;
-width: 100%;
-}
+    .navbar {
+        overflow: hidden;
+        background-color: black;
+        position: fixed;
+        top: 0;
+        opacity:80%;
+        width: 100%;
+    }
 
 
 
 
-.navbar a:hover {
-background: black;
-color: black;
-}
+    .navbar a:hover {
+        background: black;
+        color: black;
+    }
 
+
+    .main {
+        margin-top: 40px;
+    }
+    .img {
+
+        top:100px;
+
+    }
 </style>
 <nav class="navbar navbar a">
-<body class="container">
-<h1>Recursos Humanos - TravelTrip</h1>
-<hr>
-<div class="container px-4 py-5">
+
+    <div class="container-fluid">
+
+        <a class="btn btn-outline-light" href="index.html" type="button">Empleados</a>
+        <a class="btn btn-outline-light" href="perfil.html" type="button"  >Historial</a>
+        <a class="btn btn-outline-light" href="usuarios.html" type="button" > Reportes</a>
+        <br>
+        <br>
+    </div>
+</nav>
+<body>
+<center>
     <img th:src="@{'/img/travel_trip_logo.png'} " style="width: 950px;height: 700px">
-
-    <div  class=" navbar nabar a row justify-content-around" >
-        <a  ><button class="btn btn-primary">Empleados</button></a>
-        <a ><button class="btn btn-warning">Historial</button></a>
-    </div>
-    <br>
-    <div class="row justify-content-around" >
-        <a ><button class="btn btn-info">Reportes</button></a>
-
-    </div>
-
-</div>
-
+</center>
 </body>
+
+
+
+
+
 </html>
