--- a/src/main/resources/templates/fragments/Historial.html
+++ b/src/main/resources/templates/fragments/Historial.html
@@ -5,6 +5,7 @@
 <main>
   <div class="container px-4 pb-5">
     <nav th:replace="fragments/navbar.html :: navbar( active = 'Historial')"></nav>
+    <h2>Historial</h2>
     <table class="table">
       <thead>
       <tr>
